Fixed scroll bg on mobile devices

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -167,6 +167,10 @@ font-family: 'Dosis', sans-serif;
             margin:0px;
             padding-top: 25px;
         }
+
+        .pimg1, .pimg2, .pimg3{
+            background-attachment: scroll;
+        }
   }
 /* apply style if width is between 340 and 800 */
   @media screen and (max-width: 800px) and (min-width: 361px) {
